fixing overlap and js errors

--- a/projects/media-viewer/src/assets/sass/comments-summary-dialog.scss
+++ b/projects/media-viewer/src/assets/sass/comments-summary-dialog.scss
@@ -38,7 +38,7 @@ mv-comments-summary {
 
   .modal {
     position: fixed;
-    z-index: 11;
+    z-index: 1100;
     left: 0;
     top: 0;
     width: 100%;
